# rs_fec

./: CMakeLists.txt  README.md
include/: fec.h  fec_buffer.h  fec_codec.h.backup
src/: fec.cpp  fec_codec.cpp.backup
